# hatron

./: Dockerfile  Makefile  PRODUCT_COMPONENTS_SEARCH.md  README.md  docker-compose.yml  pyproject.toml
.claude-flow/: CAPABILITIES.md  config.yaml
.claude-flow/agents/: store.json
.claude-flow/metrics/: learning.json  swarm-activity.json  v3-progress.json
.claude-flow/security/: audit-status.json
alembic/: env.py
alembic/versions/: 12ac554e60f1_add_attributes.py  2026-03-31-20-21-47_add_pos_tables.py  2026-03-31-20-30-00_merge_heads.py  3ed8d0b907fe_initial_schema.py  a70caffbc7fd_add_phase_2_crm_sales_invoicing.py  b09ddf082b28_add_phase_4_modules.py  b90cf5f42cbd_add_image_url_to_products.py  cf2885b0aaf2_make_sales_orders_contact_id_nullable_.py  d240545ba046_add_phase_3_inventory_purchase.py  e8d0fbb17144_add_system_settings_table.py
backend/: __init__.py  main.py  settings.py
backend/core/: __init__.py  database.py  dependencies.py  events.py  exceptions.py  models.py  permissions.py  schemas.py  security.py
backend/core/middleware/: logging.py
backend/core/utils/: pagination.py
backend/modules/: __init__.py
backend/modules/auth/: __init__.py  models.py  repository.py  router.py  schemas.py  service.py
backend/modules/contacts/: __init__.py  models.py  repository.py  router.py  schemas.py  service.py
backend/modules/crm/: __init__.py  models.py  repository.py  router.py  schemas.py  service.py
backend/workers/: __init__.py  celery_app.py  tasks.py
frontend/: next.config.ts  package-lock.json  package.json
scripts/: seed_data.py
(+66 files in other folders)
